sample-yaml/configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-pod
spec:
  containers:
    - name: test
      image: busybox
      volumeMounts:
        - name: config-vol
          mountPath: /etc/config
  volumes:
    - name: config-vol
      configMap:
        name: log-config
        items:
          - key: log_level
            path: log_level

# The log-config ConfigMap is mounted as a volume and all its contents stored in its log_level entry
# are mounted into the Pod at path etc/config/log_level.

# ConfigMap should be created before using.
